--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -57,16 +57,15 @@
         android:hint="Password" />
 
 
-
     <Button
+        android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login_text"
-        android:id="@+id/loginButton"
-        android:layout_marginTop = "40dp"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/passwordField"
-        />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:onClick="sendMessage"
+        android:text="@string/login_text" />
 
 
 </RelativeLayout>
