--- a/app/src/main/res/layout/fragment_signup_land.xml
+++ b/app/src/main/res/layout/fragment_signup_land.xml
@@ -11,7 +11,7 @@
         android:layout_centerHorizontal = "true"
         android:textColor = "#ff7aff24"
         android:textSize = "35dp"
-        android:layout_marginTop = "120dp" />
+        android:layout_marginTop = "150dp" />
 
 
     <TextView
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/usernameField"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:text="@string/password"
         android:textColor="#ff7aff24"
         android:textSize="16dp" />
@@ -64,19 +64,7 @@
         android:layout_below="@+id/passwordField"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:onClick="sendMessage"
-        android:text="@string/login" />
-
-    <Button
-        android:id="@+id/signupButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/loginButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:onClick="sendMessage"
-        android:text="@string/sign_up" />
-
+        android:text="@string/create_account" />
 
 
 </RelativeLayout>
