--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -3,45 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height = "match_parent">
 
-    <TextView
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:text = "@string/app_name"
-        android:id = "@+id/appText"
-        android:layout_centerHorizontal = "true"
-        android:textColor = "#ff7aff24"
-        android:textSize = "35dp"
-        android:layout_marginTop = "100dp" />
-
 
     <TextView
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
         android:text = "@string/username"
-        android:id = "@+id/usernameText"
+        android:id = "@+id/text_profile"
         android:layout_centerHorizontal = "true"
-        android:layout_below = "@+id/appText"
         android:textColor = "#ff7aff24"
         android:textSize = "16dp"
-        android:layout_marginTop = "50dp" />
-    <EditText
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:id = "@+id/usernameField"
-        android:hint = "Username"
-        android:focusable = "true"
-        android:textColorHighlight = "#ff7eff15"
-        android:textColorHint = "#ffff25e6"
-        android:layout_below = "@+id/usernameText"
-        android:layout_centerHorizontal = "true" />
+        android:layout_marginTop = "30dp" />
 
     <TextView
-        android:id="@+id/passwordText"
+        android:id="@+id/newPasswordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/usernameField"
+        android:layout_below="@+id/text_profile"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="80dp"
         android:text="@string/password"
         android:textColor="#ff7aff24"
         android:textSize="16dp" />
@@ -50,8 +29,8 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:id="@+id/passwordField"
-        android:layout_below="@+id/passwordText"
+        android:id="@+id/newPasswordField"
+        android:layout_below="@+id/newPasswordText"
         android:layout_centerHorizontal = "true"
         android:textColorHint="#ffff299f"
         android:hint="Password" />
@@ -60,9 +39,9 @@
         android:id="@+id/confirmPasswordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/passwordField"
+        android:layout_below="@+id/newPasswordField"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:text="@string/confirm_password"
         android:textColor="#ff7aff24"
         android:textSize="16dp" />
@@ -79,19 +58,19 @@
 
 
     <Button
-        android:id="@+id/createAccountButton"
+        android:id="@+id/updatePasswordButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/confirmPasswordField"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:text="@string/create_account" />
+        android:layout_marginTop="40dp"
+        android:text="@string/update_password" />
 
     <Button
         android:id="@+id/cancelButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/createAccountButton"
+        android:layout_below="@+id/updatePasswordButton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:text="@string/cancel" />
