--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,29 +15,31 @@
 
 
     <TextView
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:text = "@string/username"
-        android:id = "@+id/usernameText"
-        android:layout_centerHorizontal = "true"
-        android:layout_below = "@+id/appText"
-        android:textColor = "#ff7aff24"
-        android:textSize = "16dp"
-        android:layout_marginTop = "90dp" />
+        android:id="@+id/usernameText"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/appText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="90dp"
+        android:text="@string/username"
+        android:textColor="#ff7aff24"
+        android:textSize="16dp" />
+
     <EditText
-        android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content"
-        android:id = "@+id/usernameField"
-        android:hint = "Username"
-        android:focusable = "true"
-        android:textColorHighlight = "#ff7eff15"
-        android:textColorHint = "#ffff25e6"
-        android:layout_below = "@+id/usernameText"
-        android:layout_centerHorizontal = "true" />
+        android:id="@+id/usernameField"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/usernameText"
+        android:layout_centerHorizontal="true"
+        android:focusable="true"
+        android:hint="Username"
+        android:inputType="text"
+        android:textColorHighlight="#ff7eff15"
+        android:textColorHint="#ffff25e6" />
 
     <TextView
         android:id="@+id/passwordText"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/usernameField"
         android:layout_centerHorizontal="true"
@@ -45,16 +47,17 @@
         android:text="@string/password"
         android:textColor="#ff7aff24"
         android:textSize="16dp" />
+
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
         android:id="@+id/passwordField"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/passwordText"
-        android:layout_centerHorizontal = "true"
-        android:textColorHint="#ffff299f"
-        android:hint="Password" />
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textColorHint="#ffff299f" />
 
 
     <Button
