--- a/app/src/main/res/layout/fragment_outfits.xml
+++ b/app/src/main/res/layout/fragment_outfits.xml
@@ -13,10 +13,16 @@
         android:text="@string/outfits"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <FrameLayout
-        android:id="@+id/frame_layout"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1" />
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/linear_layout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" />
+    </ScrollView>
+
 
 </LinearLayout>
