--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -1,14 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/linear_layout"
+    android:background="@android:drawable/gallery_thumb"
+    android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/text_post"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:text="Post"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="@string/clothes"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </TextView>
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        android:id="@+id/importButton"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Select or Capture Image" />
+    <TextView
+        android:id="@+id/outfit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical|center_horizontal"
+        android:text="@string/clothes"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/selectButton"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Select Virtual Outfit" />
+
+</LinearLayout>
