--- a/app/src/main/res/layout/post_view.xml
+++ b/app/src/main/res/layout/post_view.xml
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"/>
     <ImageView
+        android:id="@+id/postImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="hmmmmm"
