--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -9,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="20dp"
-        android:layout_marginTop="5dp" >
+        android:layout_marginTop="5dp"
+        android:layout_gravity="center">
+
 
         <LinearLayout
             android:id ="@+id/post_feed"
