--- a/app/src/main/res/layout/fragment_clothes.xml
+++ b/app/src/main/res/layout/fragment_clothes.xml
@@ -21,7 +21,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Select or Capture Image" />
+        android:text="Select Image" />
     <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
