--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -9,17 +9,51 @@
         <RelativeLayout
             android:id="@+id/form_layout"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width = "wrap_content"
-                android:layout_height = "wrap_content"
-                android:text = "@string/app_name"
-                android:id = "@+id/appText"
-                android:layout_centerHorizontal = "true"
-                android:textColor = "#ff7aff24"
-                android:textSize = "35dp"
-                android:layout_marginTop = "100dp" />
+            android:layout_height="match_parent">
 
+            <Button
+                android:id="@+id/loginButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/passwordField"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="40dp"
+                android:text="@string/login" />
+
+
+            <Button
+                android:id="@+id/signupButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/loginButton"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="@string/sign_up" />
+
+            <EditText
+                android:id="@+id/usernameField"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/usernameText"
+                android:layout_centerHorizontal="true"
+                android:saveEnabled="false"
+                android:focusable="true"
+                android:hint="Username"
+                android:inputType="text"
+                android:textColorHighlight="#ff7eff15"
+                android:textColorHint="#ffff25e6" />
+
+            <EditText
+                android:id="@+id/passwordField"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/passwordText"
+                android:layout_centerHorizontal="true"
+                android:saveEnabled="false"
+                android:ems="10"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textColorHint="#ffff299f" />
 
             <TextView
                 android:id="@+id/usernameText"
@@ -32,17 +66,16 @@
                 android:textColor="#ff7aff24"
                 android:textSize="16dp" />
 
-            <EditText
-                android:id="@+id/usernameField"
-                android:layout_width="200dp"
+
+            <TextView
+                android:id="@+id/appText"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/usernameText"
                 android:layout_centerHorizontal="true"
-                android:focusable="true"
-                android:hint="Username"
-                android:inputType="text"
-                android:textColorHighlight="#ff7eff15"
-                android:textColorHint="#ffff25e6" />
+                android:layout_marginTop="100dp"
+                android:text="@string/app_name"
+                android:textColor="#ff7aff24"
+                android:textSize="35dp" />
 
             <TextView
                 android:id="@+id/passwordText"
@@ -54,37 +87,6 @@
                 android:text="@string/password"
                 android:textColor="#ff7aff24"
                 android:textSize="16dp" />
-
-            <EditText
-                android:id="@+id/passwordField"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/passwordText"
-                android:layout_centerHorizontal="true"
-                android:ems="10"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:textColorHint="#ffff299f" />
-
-
-            <Button
-                android:id="@+id/loginButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/passwordField"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="40dp"
-                android:text="@string/login" />
-
-            <Button
-                android:id="@+id/signupButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/loginButton"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:text="@string/sign_up" />
-
 
 
         </RelativeLayout>
