--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/appText"
         android:layout_centerHorizontal="true"
+        android:saveEnabled="false"
         android:layout_marginTop="90dp"
         android:text="@string/username"
         android:textColor="#ff7aff24"
@@ -31,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/usernameText"
         android:layout_centerHorizontal="true"
+        android:saveEnabled="false"
         android:focusable="true"
         android:hint="Username"
         android:inputType="text"
