--- a/app/src/main/res/layout-land/layout_center_accountsettings.xml
+++ b/app/src/main/res/layout-land/layout_center_accountsettings.xml
@@ -1,9 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_height="wrap_content"
@@ -51,4 +47,6 @@
             android:text="@string/delete_account" />
     </RelativeLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+</merge>
