scroll for acct settings

--- a/app/src/main/res/layout-land/fragment_accountsettings.xml
+++ b/app/src/main/res/layout-land/fragment_accountsettings.xml
@@ -4,51 +4,55 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <RelativeLayout
-        android:layout_height="wrap_content"
+    <ScrollView
         android:layout_width="match_parent"
-        android:padding="20dp"
-        android:background="@color/white">
-
-
-        <TextView
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textSettings"
-            android:text="Account Settings"
-            android:textSize="35dp"
-            android:textColor="@color/black"
-            android:background="@color/white"/>
-
-        <Button
-            android:id="@+id/signOutButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textSettings"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
-            android:text="@string/sign_out" />
+            android:padding="20dp"
+            android:background="@color/white">
 
 
-        <Button
-            android:id="@+id/updatePasswordButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/signOutButton"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:text="@string/update_password" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textSettings"
+                android:text="Account Settings"
+                android:textSize="35dp"
+                android:textColor="@color/black"
+                android:background="@color/white"/>
+
+            <Button
+                android:id="@+id/signOutButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textSettings"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="40dp"
+                android:text="@string/sign_out" />
 
 
-        <Button
-            android:id="@+id/deleteAccountButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/updatePasswordButton"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
-            android:text="@string/delete_account" />
-    </RelativeLayout>
+            <Button
+                android:id="@+id/updatePasswordButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/signOutButton"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:text="@string/update_password" />
+
+
+            <Button
+                android:id="@+id/deleteAccountButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/updatePasswordButton"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:text="@string/delete_account" />
+        </RelativeLayout>
+    </ScrollView>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
